
syntax = "proto3";

package registrar;

import "google/api/annotations.proto";
/*
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "examples/sub/message.proto";
import "examples/sub2/message.proto";
import "google/protobuf/timestamp.proto";
*/

message ServiceDescription {
string name = 1;
int64 build =2;
enum Servicetype {
grpc = 0;
json = 1;
}
Servicetype type = 4;
}

message ServiceAddress {
string Host=1;
int32 Port=2;
}

message ServiceLocation {
ServiceDescription Service=1;
repeated ServiceAddress Address=2;
}

message GetRequest {
ServiceDescription Service=1;
}
message GetResponse {
ServiceDescription Service=1;
ServiceLocation Location=2;
}

message ListResponse {
repeated GetResponse Service = 3;
}

message ListRequest{}

service Registry {
 rpc RegisterService(ServiceLocation) returns (GetResponse);
 rpc GetServiceAddress(GetRequest) returns (GetResponse);
 rpc ListServices(ListRequest) returns (ListResponse);
}